manifests/jellyfin/templates/service.yaml
---
# Source: jellyfin/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    helm.sh/chart: jellyfin-1.6.9
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/version: "10.9.9"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/instance: jellyfin
