manifests/jellyfin/templates/ingress.yaml
---
# Source: jellyfin/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  labels:
    helm.sh/chart: jellyfin-1.6.9
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/version: "10.9.9"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - "jellyfin.mukka.haus"
      secretName: jellyfin-tls
  rules:
    - host: "jellyfin.mukka.haus"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 80
