manifests/jellyfin/templates/extra-manifests.yaml
---
# Source: jellyfin/templates/extra-manifests.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: restrict
spec:
  egress:
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      rules:
        dns:
        - matchPattern: '*'
  - toFQDNs:
    - matchName: repo.jellyfin.org
    - matchName: fra1.mirror.jellyfin.org
    - matchName: raw.githubusercontent.com
    - matchName: api.opensubtitles.com
    - matchName: www.omdbapi.com
    - matchName: api.themoviedb.org
    - matchName: image.tmdb.org
    toPorts:
    - ports:
      - port: "443"
  - toEndpoints:
    - {}
  endpointSelector: {}
